--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ quarkus.http.port=8082
 # url根路径
 quarkus.http.root-path=/
 
+quarkus.test.continuous-testing=enabled
+
 # mysql数据源配置
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3366/quarkus?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf8
 quarkus.datasource.username=root
